grammars/tree-sitter-qore/grammar.js
    source_file: $ => repeat($._top_level_item),

    _top_level_item: $ => choice(
      $.parse_directive,
      $.namespace_declaration,
      $.class_declaration,
      $.function_declaration,
      $.constant_declaration,
      $.global_variable_declaration,
      $.hashdecl_declaration,
      $.typedef_declaration,
      $.enum_declaration,
      $._statement,
    ),

    // ==================== Parse Directives ====================
    parse_directive: $ => seq(
      '%',
      choice(
        // Style directives
        'new-style',
        'old-style',
        // Type checking
        'require-types',
        'strict-types',
        'require-prototypes',
        // Variable handling
        'require-our',
        'assume-local',
        'assume-global',
        'allow-bare-refs',
        // Boolean evaluation
        'perl-bool-eval',
        'strict-bool-eval',
        // Debugging
        'enable-debug',
        'disable-debug',
        // Warning controls
        seq('disable-warning', $.identifier),
        seq('enable-warning', $.identifier),
        'enable-all-warnings',
        'disable-all-warnings',
        // Module directives
        seq('requires', $.module_name),
        seq('try-module', $.module_name),
        // Other common directives
        'strict-args',
        'no-global-vars',
        'no-child-restrictions',
        'no-typedef',
        'no-enum',
        'no-transient',
        'lockdown',
        'exec-class',
        'modern',
        'push-parse-options',
        'pop-parse-options',
        // Conditional parsing directives
        seq('ifdef', $.identifier),
        seq('ifndef', $.identifier),
        seq('if', '(', $._expression, ')'),
        seq('elif', '(', $._expression, ')'),
        'else',
        'endif',
      ),
      optional($.newline),
    ),

    namespace_declaration: $ => seq(
      optional($.modifiers),
      'namespace',
      field('name', choice($.identifier, $.scoped_identifier)),
      choice(
        seq('{', repeat($._namespace_item), '}'),
        ';',
      ),
    ),

    _namespace_item: $ => choice(
      $.parse_directive,
      $.namespace_declaration,
      $.class_declaration,
      $.function_declaration,
      $.constant_declaration,
      $.global_variable_declaration,
      $.hashdecl_declaration,
      $.typedef_declaration,
      $.enum_declaration,
    ),

    // ==================== Class ====================
    global_variable_declaration: $ => seq(
      choice('our', 'my'),
      optional(field('type', $.type)),
      commaSep1($.variable_declarator),
      ';',
    ),

    variable_declarator: $ => choice(
      seq(
        field('name', $.variable_name),
        optional(seq('=', field('value', $._expression))),
      ),
      // Object construction: identifier(args) or just identifier
      seq(
        field('name', $.identifier),
        optional(choice(
          seq('=', field('value', $._expression)),
          $.argument_list,  // Constructor arguments
        )),
      ),
    ),

    // ==================== Hashdecl ====================
    enum_declaration: $ => seq(
      optional($.modifiers),
      'enum',
      field('name', $.identifier),
      optional(seq(':', field('base_type', $.type))),
      '{',
      optional(commaSep1($.enum_member)),
      optional(','),  // trailing comma allowed
      '}',
    ),

    enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $._expression))),
    ),

    // ==================== Statements ====================
    _expression: $ => choice(
      $.assignment_expression,
      $.ternary_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.primary_expression,
    ),

    binary_expression: $ => choice(
      // Null coalescing
      prec.left(PREC.NULL_COALESCE, seq($._expression, choice('??', '?*'), $._expression)),
      // Logical
      prec.left(PREC.LOGICAL_OR, seq($._expression, choice('||', 'or'), $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, choice('&&', 'and'), $._expression)),
      // Bitwise
      prec.left(PREC.BITWISE_OR, seq($._expression, '|', $._expression)),
      prec.left(PREC.BITWISE_XOR, seq($._expression, '^', $._expression)),
      prec.left(PREC.BITWISE_AND, seq($._expression, '&', $._expression)),
      // Equality
      prec.left(PREC.EQUALITY, seq($._expression, choice('==', '!=', '===', '!==', '=~', '!~'), $._expression)),
      // Comparison
      prec.left(PREC.COMPARISON, seq($._expression, choice('<', '>', '<=', '>=', '<=>'), $._expression)),
      prec.left(PREC.COMPARISON, seq($._expression, 'instanceof', $._expression)),
      // Shift
      prec.left(PREC.SHIFT, seq($._expression, choice('<<', '>>'), $._expression)),
      // Arithmetic
      prec.left(PREC.ADD, seq($._expression, choice('+', '-'), $._expression)),
      prec.left(PREC.MULTIPLY, seq($._expression, choice('*', '/', '%'), $._expression)),
      // Range
      prec.left(PREC.ADD, seq($._expression, '..', $._expression)),
    ),

    primary_expression: $ => choice(
      $.identifier,
      $.variable_name,
      $.scoped_identifier,
      $.literal,
      $.string,
      $.list_literal,
      $.paren_hash_literal,
      $.hash_literal,
      $.closure_expression,
      $.call_expression,
      $.member_expression,
      $.index_expression,
      $.cast_expression,
      $.parenthesized_expression,
      $.implicit_argument,
      $.context_reference,
      $.regex,
      // Higher-order functions
      $.map_expression,
      $.select_expression,
      $.foldl_expression,
      $.foldr_expression,
    ),

    literal: $ => choice(
      $.integer,
      $.float,
      $.number,
      $.boolean,
      $.null,
      $.nothing,
      $.date,
      $.binary,
    ),

    integer: $ => token(choice(
      /[0-9]+/,
      /0x[0-9a-fA-F]+/,
      /0o[0-7]+/,
      /0b[01]+/,
    )),

    string: $ => choice(
      $.single_quoted_string,
      $.double_quoted_string,
    ),

    double_quoted_string: $ => seq(
      '"',
      repeat(choice(
        $.escape_sequence,
        $.string_interpolation,
        /[^"\\$]+/,
      )),
      '"',
    ),

    type: $ => choice(
      $.simple_type,
      $.complex_type,
      $.nullable_type,
    ),

    simple_type: $ => choice(
      'int',
      'float',
      'number',
      'bool',
      'string',
      'date',
      'binary',
      'hash',
      'list',
      'object',
      'code',
      'reference',
      'nothing',
      'any',
      'auto',
      'data',
      'softint',
      'softfloat',
      'softnumber',
      'softbool',
      'softstring',
      'softdate',
      'softlist',
      'timeout',
      $.identifier,
      $.scoped_identifier,
    ),

    complex_type: $ => choice(
      // hash<type>, list<type>, softlist<type>, enum<type>
      seq(
        choice('hash', 'list', 'softlist', 'enum'),
        '<',
        $.type,
        '>',
      ),
      // date<absolute> or date<relative>
      seq(
        'date',
        '<',
        choice('absolute', 'relative'),
        '>',
      ),
      // union<type1, type2, ...>
      seq(
        'union',
        '<',
        commaSep1($.type),
        '>',
      ),
      // code<return_type(param_types...)> or code<return_type()>
      seq(
        'code',
        '<',
        $.type,  // return type
        '(',
        optional($.code_param_types),
        ')',
        '>',
      ),
    ),

    // Parameter types for code<> signature, supporting varargs
    code_param_types: $ => choice(
      // Just varargs: code<int(...)>
      '...',
      // Types optionally followed by varargs: code<int(string, ...)>
      seq(
        commaSep1($.type),
        optional(seq(',', '...')),
      ),
    ),

    nullable_type: $ => seq('*', $.type),

    // ==================== Modifiers ====================
    modifiers: $ => repeat1($.modifier),

    modifier: $ => choice(
      $.access_modifier,
      'abstract',
      'final',
      'static',
      'synchronized',
      'deprecated',
      'transient',
    ),

    access_modifier: $ => choice(
      'public',
      'private',
      'private:internal',
      'private:hierarchy',
    ),

    // ==================== Identifiers ====================
    identifier: $ => /[a-zA-Z_][a-zA-Z0-9_]*/,

    scoped_identifier: $ => prec.left(seq(
      optional('::'),
      $.identifier,
      repeat1(seq('::', $.identifier)),
    )),

    // ==================== Comments ====================
    newline: $ => /\r?\n/,
  },
});

/**
 * Creates a rule for comma-separated items with at least one item.
 */
function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

/**
 * Creates a rule for comma-separated items (zero or more).
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}
