grammars/tree-sitter-qore/test/corpus/errors.txt
================================================================================
ifdef without identifier:error
================================================================================

%ifdef

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
ifndef without identifier:error
================================================================================

%ifndef

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
if without expression:error
================================================================================

%if

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
elif without expression:error
================================================================================

%elif

--------------------------------------------------------------------------------

(source_file
  (ERROR))

================================================================================
union without closing angle bracket:error
================================================================================

our union<int, string value;

--------------------------------------------------------------------------------

(source_file
  (global_variable_declaration
    (type
      (complex_type
        (type
          (simple_type))
        (type
          (simple_type))
        (MISSING ">")))
    (variable_declarator
      (identifier))))

================================================================================
code type missing closing paren:error
================================================================================

our code<int(string> callback;

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (type
      (simple_type))
    (type
      (simple_type))
    (UNEXPECTED 'l')))

================================================================================
code type missing closing angle bracket:error
================================================================================

our code<int() callback;

--------------------------------------------------------------------------------

(source_file
  (global_variable_declaration
    (type
      (complex_type
        (type
          (simple_type))
        (MISSING ">")))
    (variable_declarator
      (identifier))))

================================================================================
empty union type:error
================================================================================

our union<> empty;

--------------------------------------------------------------------------------

(source_file
  (global_variable_declaration
    (type
      (complex_type
        (type
          (simple_type
            (MISSING "int")))))
    (variable_declarator
      (identifier))))
