grammars/tree-sitter-qore/test/corpus/parse_directives.txt
================================================================================
no-typedef directive
================================================================================

%no-typedef

--------------------------------------------------------------------------------

(source_file
  (parse_directive
    (newline)))

================================================================================
no-enum directive
================================================================================

%no-enum

--------------------------------------------------------------------------------

(source_file
  (parse_directive
    (newline)))

================================================================================
no-transient directive
================================================================================

%no-transient

--------------------------------------------------------------------------------

(source_file
  (parse_directive
    (newline)))

================================================================================
multiple new directives
================================================================================

%no-typedef
%no-enum
%no-transient

--------------------------------------------------------------------------------

(source_file
  (parse_directive
    (newline))
  (parse_directive
    (newline))
  (parse_directive
    (newline)))
